2008-04-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #525508, spotted by Thomas M.

	* message-list.c (ml_tree_value_at):
	Fix a leaking CamelURL in the COL_LOCATION case.

2008-04-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #525510, patch from Thomas M.

	* message-list.c (ml_tree_value_at):
	Mark "On This Computer" for translation.

2008-03-29  Matthew Barnes  <mbarnes@redhat.com>

	* em-network-prefs.c (em_network_prefs_finalise),
	(em_network_prefs_destroy), (emnp_parse_ignore_hosts):
	Fix some unused variable warnings.

2008-03-27  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #523271

	* em-popup.c (emp_standard_menu_factory):
	Lowercase the MIME type before passing it to
	gnome_vfs_mime_get_all_applications().

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #522178

	* mail-folder-cache.c: (folder_changed): Put back hack with
	checking time of new message in the folder based with last
	time of new mail as it was before patch in bug #492702.

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #519292

	* message-list.h: (message_list_set_expand_all):
	* message-list.c: (message_list_set_expand_all):
	Remove unused confusing function.
	* message-list.c: (regen_list_done):
	Use numbers instead of gboolean value.

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #502826 (original patch by nickspoon0)

	* mail-config.glade:
	* em-composer-prefs.c: (attach_style_reply_new_order),
	(attach_style_info_reply), (em_composer_prefs_construct):
	Reword and reorder Reply Style items in the Preferences.

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #488175

	* message-list.c: (ml_tree_value_at):
	Colorize follow-up messages same as with due-by flag.

2008-03-25  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Added configurable Proxy settings for Evolution.

	* GNOME_Evolution_Mail.server.in.in:
	* Makefile.am:
	* em-network-prefs.c: (em_network_prefs_get_type),